--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,12 @@ node_modules/
 # production
 /build
 
+# Coba Files
+/frontend/coba
+
 # misc
 .DS_Store
+Noted.txt
 .env
 .env.local
 .env.development.local
