--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "online_store_mern",
+  "name": "lela_cookies_mern",
   "version": "1.0.0",
   "description": "MERN Lela Cookies",
   "main": "server.js",
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/EffenrilAgung/online_store_mern.git"
+    "url": "git+https://github.com/EffenrilAgung/lela_cookies_mern.git"
   },
   "author": "Effenril Agung",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/EffenrilAgung/online_store_mern/issues"
+    "url": "https://github.com/EffenrilAgung/lela_cookies_mern/issues"
   },
-  "homepage": "https://github.com/EffenrilAgung/online_store_mern#readme",
+  "homepage": "https://github.com/EffenrilAgung/lela_cookies_mern#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
