--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-iframe": "^1.8.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.25.0",
